targets/srv0/k3s/flaresolverr/flaresolverr.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flaresolverr
  namespace: apps
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: flaresolverr
  template:
    metadata:
      labels:
        app: flaresolverr
    spec:
      containers:
        - name: flaresolverr
          image: ghcr.io/flaresolverr/flaresolverr:latest@sha256:139dfee1c6f89249c8d665d1333a42e8ec74ec0a86bc6bb1c8461e10d3a66a47
          securityContext:
            allowPrivilegeEscalation: false
          ports:
            - containerPort: 8191
          resources:
            limits:
              memory: 2Gi
            requests:
              memory: 128Mi
          readinessProbe:
            tcpSocket:
              port: 8191
            periodSeconds: 30
            timeoutSeconds: 5
            failureThreshold: 3
---
apiVersion: v1
kind: Service
metadata:
  name: flaresolverr
  namespace: apps
spec:
  type: ClusterIP
  selector:
    app: flaresolverr
  ports:
    - port: 8191
      targetPort: 8191
